Deployment_Project/force-app/main/default/objects/Customer_Information__c/Customer_Information__c.object-meta.xml
<CustomObject>
    <label>Customer Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>