Deployment_Project/force-app/main/default/objects/Customer_Information__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Customer&apos;s Address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>