Deployment_Project/force-app/main/default/objects/Customer_Information__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Customer&apos;s City</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>