Deployment_Project/force-app/main/default/objects/Customer_Information__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer&apos;s Email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>