Deployment_Project/force-app/main/default/objects/Customer_Information__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer&apos;s Phone</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>