Deployment_Project/force-app/main/default/objects/Customer_Information__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Customer&apos;s State</description>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>