Deployment_Project/force-app/main/default/objects/Customer_Information__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Customer&apos;s Zip Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>